--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,16 @@
         android:textColor="#FFFFFF"
         tools:layout_marginTop="10dp" />
 
+    <Button
+        android:id="@+id/loginAct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#2196F3"
+        android:text="login"
+        android:textColor="#FFFFFF"
+        tools:layout_marginTop="10dp" />
+
 
 
 </LinearLayout>
