--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,24 @@
         android:textColor="#FFFFFF"
         tools:layout_marginTop="10dp" />
 
+    <Button
+        android:id="@+id/ViewGoalBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#2196F3"
+        android:text="View Goal"
+        android:textColor="#FFFFFF"
+        tools:layout_marginTop="10dp" />
 
+    <Button
+        android:id="@+id/MyProfileBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#2196F3"
+        android:text="My Profile"
+        android:textColor="#FFFFFF"
+        tools:layout_marginTop="10dp" />
 
 </LinearLayout>
