--- a/app/src/main/res/layout/activity_view_blog.xml
+++ b/app/src/main/res/layout/activity_view_blog.xml
@@ -6,14 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ViewBlogActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get Data"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/authorText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/blogEntryList"
+        android:gravity="center"
+        />
+
+    <ListView
+        android:id="@+id/blogEntryList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider = "#e5e5ff"
+        android:dividerHeight="1dp"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
