--- a/app/src/main/res/layout/activity_flag_blog_entry.xml
+++ b/app/src/main/res/layout/activity_flag_blog_entry.xml
@@ -74,5 +74,13 @@
         app:layout_constraintTop_toBottomOf="@+id/radio_group"
 
         />
+    <Button
+        android:id = "@+id/submit_report_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/other_reason_text"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Submit"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
