dashboard and setting page screen design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,15 @@
         android:textColor="#FFFFFF"
         tools:layout_marginTop="10dp" />
 
+    <Button
+        android:id="@+id/dashboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#2196F3"
+        android:text="View Dashboard"
+        android:textColor="#FFFFFF"
+        tools:layout_marginTop="10dp" />
 
 
 </LinearLayout>
