--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -106,6 +106,7 @@
         app:layout_constraintBottom_toTopOf="@id/createAccPwd"
         android:layout_marginTop="20dp"
         android:hint="Email"
+        android:inputType="textEmailAddress"
         android:ems="10"/>
 
     <TextView
