--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -26,7 +26,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        />
 
+    <ImageButton
+        android:id="@+id/uploadProfilePic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        app:layout_constraintLeft_toRightOf="@+id/profilePhoto"
+        app:layout_constraintTop_toBottomOf="@+id/myProfileText"
+        android:layout_marginTop="80dp"
         />
 
 
@@ -119,6 +128,18 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
+    <TextView
+        android:id="@+id/profileValidationText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:text="PLease fill in all info to let us know you!"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weightedit"
+        />
     <Button
         android:id="@+id/submitProfileChange"
         android:layout_width="181dp"
@@ -130,5 +151,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/weightedit" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
