--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -51,4 +51,10 @@
         android:textColor="#FFFFFF"
         tools:layout_marginTop="10dp"/>
 
+    <Button
+        android:id="@+id/redirect_ms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Manage Socials"/>
+
 </LinearLayout>
