--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -139,7 +139,7 @@
                 android:id="@+id/happyCircle"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
