--- a/app/src/main/res/layout/activity_comment_blog_entry.xml
+++ b/app/src/main/res/layout/activity_comment_blog_entry.xml
@@ -6,7 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".CommentBlogEntryActivity">
 
-    <include layout="@layout/blog_row"/>
+    <include
+        layout="@layout/blog_row"
+        android:id="@+id/comment_blog_entry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <ListView
+        android:id="@+id/comment_section"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@id/comment_blog_entry"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
