--- a/app/src/main/res/layout/friendrow.xml
+++ b/app/src/main/res/layout/friendrow.xml
@@ -12,6 +12,7 @@
         android:layout_height="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,5 +36,16 @@
         android:text="Username"
         app:layout_constraintLeft_toLeftOf="@id/friendName"
         app:layout_constraintTop_toBottomOf="@id/friendName"/>
+
+    <ImageView
+        android:id="@+id/friendDetailBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/friendUsername"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
