--- a/app/src/main/res/layout/userrow.xml
+++ b/app/src/main/res/layout/userrow.xml
@@ -12,6 +12,7 @@
         android:layout_height="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
