--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -9,8 +9,12 @@
         android:id="@+id/setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/reminderText"
-        android:padding="20dp"/>
+        android:text="@string/settings"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:padding="20dp"
+        android:background="@color/greyOffT"
+        android:textColor="@color/white"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,8 +33,8 @@
             android:id="@+id/timeSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="20dp"/>
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="150dp"/>
 
 
     </LinearLayout>
@@ -39,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="20dp">
+        android:paddingLeft="20dp">
 
         <TimePicker
             android:id="@+id/timePicker"
@@ -54,7 +58,8 @@
             android:text="@string/setTime"
             android:textAllCaps="true"
             android:padding="10dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"/>
 
 
     </LinearLayout>
