--- a/app/src/main/res/layout/activity_userdashboard.xml
+++ b/app/src/main/res/layout/activity_userdashboard.xml
@@ -28,7 +28,7 @@
             android:id="@+id/viewCurrentGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/current_goal"
+            android:text=""
             android:textSize="15dp"
             android:padding="5dp"/>
 
@@ -56,12 +56,22 @@
             android:layout_height="250dp"
             android:layout_gravity="center_horizontal"/>
 
+
         <!--view needed to ensure navigation bar stays at bottom-->
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"/>
+
+
+        <TextView
+            android:id="@+id/intro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/intro_to_app"
+            android:padding="20dp"/>
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
