--- a/app/src/main/res/layout/activity_past_goals.xml
+++ b/app/src/main/res/layout/activity_past_goals.xml
@@ -7,13 +7,23 @@
     tools:context=".PastGoalsActivity">
 
 
+    <TextView
+        android:id="@+id/PastGoalText"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Past Goals"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
     <ListView
         android:id="@+id/pastGoalList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="1"
+        app:layout_constraintHeight_percent="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PastGoalText"
          />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
