--- a/app/src/main/res/layout/activity_view_goal.xml
+++ b/app/src/main/res/layout/activity_view_goal.xml
@@ -7,28 +7,7 @@
     tools:context=".ViewGoalActivity">
 
 
-    <Button
-        android:id="@+id/PastGoalBtn"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:text="Past Goals"
-        android:background="#194a8d"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/analyticsBtn"
-        app:layout_constraintTop_toBottomOf="@id/MyGoalText" />
-    <Button
-        android:id="@+id/analyticsBtn"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:text="Analytics"
-        android:background="#194a8d"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toRightOf="@+id/PastGoalBtn"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/MyGoalText" />
+
     <TextView
         android:id="@+id/MyGoalText"
         android:layout_width="wrap_content"
@@ -47,7 +26,7 @@
         android:text="CURRENT PATH"
         android:textSize="25sp"
         android:textColor="@color/black"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -56,8 +35,8 @@
 
     <iss.nus.adproject_android_v2.ui.ImageViewPlus
         android:id="@+id/CurrentGoalPhoto"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:src="@drawable/chickenrice"
         android:alpha="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -72,7 +51,7 @@
             android:layout_alignParentTop="true"
             android:text="Cut Weight"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="28sp"
             android:layout_marginTop="40dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -81,8 +60,8 @@
 
     <Button
         android:id="@+id/SeeDetailsBtn"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginTop="62dp"
         android:text="See details"
         android:backgroundTint="#2196F3"
@@ -100,7 +79,7 @@
         android:text=""
         android:textColor="@color/black"
         android:textSize="25sp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/CurrentGoalPhoto"
@@ -112,7 +91,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:max="100"
-        android:progress="0"
+        android:progressDrawable="@drawable/progressbar_preview"
         android:visibility="visible"
         app:layout_constraintHeight_percent="0.05"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -158,5 +137,27 @@
         app:layout_constraintTop_toBottomOf="@id/totalCount"
         />
 
+    <Button
+        android:id="@+id/PastGoalBtn"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:text="Past Goals"
+        android:backgroundTint="#2196F3"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/analyticsBtn"
+        app:layout_constraintTop_toBottomOf="@id/TotalMealRecord" />
+    <Button
+        android:id="@+id/analyticsBtn"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:text="Analytics"
+        android:backgroundTint="#2196F3"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toRightOf="@+id/PastGoalBtn"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/TotalMealRecord" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
