--- a/app/src/main/res/layout/pastgoalrow.xml
+++ b/app/src/main/res/layout/pastgoalrow.xml
@@ -16,17 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/goalStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/goalTitle"
-        app:layout_constraintTop_toBottomOf="@+id/goalTitle" />
+
     <TextView
         android:id="@+id/goalStartDate"
         android:layout_width="wrap_content"
@@ -34,7 +24,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="120dp"
         android:text="2022-2-14"
-
         app:layout_constraintRight_toLeftOf="@+id/goalEndDate"
         app:layout_constraintTop_toBottomOf="@id/goalTitle" />
 
@@ -47,4 +36,16 @@
         android:text="2022-2-14"
         app:layout_constraintLeft_toRightOf="@+id/goalStartDate"
         app:layout_constraintTop_toBottomOf="@id/goalTitle" />
+
+    <TextView
+        android:id="@+id/goalStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="10dp"
+        android:textSize="18dp"
+        android:text="status"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@+id/goalEndDate"
+        app:layout_constraintTop_toBottomOf="@+id/goalTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
