--- a/app/src/main/res/layout/activity_comment_blog_entry.xml
+++ b/app/src/main/res/layout/activity_comment_blog_entry.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:textStyle = "bold"
-        android:gravity="right"
+        android:gravity="left"
         app:layout_constraintTop_toBottomOf="@+id/comment_blog_entry"
         app:layout_constraintStart_toStartOf="parent"
 
