--- a/app/src/main/res/layout/activity_rec_search_result.xml
+++ b/app/src/main/res/layout/activity_rec_search_result.xml
@@ -35,8 +35,8 @@
             android:layout_height="match_parent"
             android:divider="#e5e5ff"
             android:dividerHeight="1dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -85,6 +85,120 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/badResultMsg" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/detailsPopup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#8A424242"
+        android:visibility="invisible">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/detailsInner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="200dp"
+            android:background="#FFFCFC"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/detailsImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="10dp"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/detailsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="42dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:maxWidth="265dp"
+                android:text="Fried Chicken"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toRightOf="@id/detailsImage"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/detailsAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:text="author"
+                app:layout_constraintLeft_toLeftOf="@id/detailsTitle"
+                app:layout_constraintTop_toBottomOf="@id/detailsTitle"
+                app:layout_constraintBottom_toTopOf="@id/detailsFeeling"
+                />
+
+            <!--<TextView
+                android:id="@+id/recFeeling"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:text="feeling"
+                app:layout_constraintLeft_toLeftOf="@id/recEntryTitle"
+                app:layout_constraintTop_toBottomOf="@id/recEntryAuthor" />-->
+
+            <ImageView
+                android:id="@+id/detailsFeeling"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="4dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintLeft_toLeftOf="@id/detailsTitle"
+                app:layout_constraintTop_toBottomOf="@id/detailsAuthor"/>
+
+            <TextView
+                android:id="@+id/detailsTrack"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="4dp"
+                android:text="on/off track"
+                android:layout_marginLeft="20dp"
+                app:layout_constraintLeft_toRightOf="@id/detailsFeeling"
+                app:layout_constraintTop_toBottomOf="@id/detailsAuthor"
+                app:layout_constraintBottom_toTopOf="@id/detailsDesc"
+                android:textSize="16sp"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/detailsDesc"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginTop="30dp"
+                android:text="on/off track"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/detailsTrack"
+                android:scrollbars="vertical"/>
+
+            <Button
+                android:id="@+id/detailsCloseBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Close"
+                android:textSize="18sp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="@id/detailsInner"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
