--- a/app/src/main/res/layout/rec_result_row.xml
+++ b/app/src/main/res/layout/rec_result_row.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_gravity="center">
 
     <!--<ImageView
         android:id="@+id/foodImage"
@@ -29,10 +30,12 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/recEntryTitle"
@@ -40,6 +43,7 @@
         android:layout_height="42dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
+        android:maxWidth="265dp"
         android:text="Fried Chicken"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -50,7 +54,7 @@
         android:id="@+id/recEntryAuthor"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="4dp"
         android:text="author"
         app:layout_constraintLeft_toLeftOf="@id/recEntryTitle"
         app:layout_constraintTop_toBottomOf="@id/recEntryTitle"
@@ -69,7 +73,7 @@
         android:id="@+id/recFeeling"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="@id/recEntryTitle"
         app:layout_constraintTop_toBottomOf="@id/recEntryAuthor" />
@@ -78,11 +82,13 @@
         android:id="@+id/recTrack"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="4dp"
         android:text="on/off track"
         android:layout_marginLeft="20dp"
         app:layout_constraintLeft_toRightOf="@id/recFeeling"
         app:layout_constraintTop_toBottomOf="@id/recEntryAuthor"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="16sp"
         android:gravity="center"/>
 
