--- a/app/src/main/res/layout/activity_userdashboard.xml
+++ b/app/src/main/res/layout/activity_userdashboard.xml
@@ -70,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/intro_to_app"
-            android:padding="20dp"/>
+            android:padding="20dp"
+            android:visibility="invisible"/>
 
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
