--- a/app/src/main/res/layout/friendrow.xml
+++ b/app/src/main/res/layout/friendrow.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <iss.nus.adproject_android_v2.ui.ImageViewPlus
         android:id="@+id/friendImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
