--- a/app/src/main/res/layout/activity_userdashboard.xml
+++ b/app/src/main/res/layout/activity_userdashboard.xml
@@ -57,7 +57,7 @@
             android:layout_gravity="center_horizontal"/>
 
 
-        <!--view needed to ensure navigation bar stays at bottom-->
+        <!--view needed to ensure navigation bar stays at bottom for linear layout-->
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
