--- a/app/src/main/res/layout/activity_friend_requests.xml
+++ b/app/src/main/res/layout/activity_friend_requests.xml
@@ -80,7 +80,7 @@
         android:id="@+id/processReqPopup"
         android:layout_width="250dp"
         android:layout_height="270dp"
-        android:background="#a8a8a8"
+        android:background="@drawable/popup_background"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -152,7 +152,7 @@
         android:id="@+id/delReqPopup"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:background="#a8a8a8"
+        android:background="@drawable/popup_background"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
