--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -186,7 +186,7 @@
         android:id="@+id/trackQn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Prefer on/off track?"
+        android:text="Prefer on/off track meals?"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
