--- a/app/src/main/res/layout/rec_result_row.xml
+++ b/app/src/main/res/layout/rec_result_row.xml
@@ -27,14 +27,14 @@
 
     <ImageView
         android:id="@+id/recEntryImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -42,13 +42,14 @@
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="2dp"
         android:maxWidth="265dp"
         android:text="Fried Chicken"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/recEntryImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recEntryAuthor"/>
 
     <TextView
         android:id="@+id/recEntryAuthor"
@@ -58,6 +59,7 @@
         android:text="author"
         app:layout_constraintLeft_toLeftOf="@id/recEntryTitle"
         app:layout_constraintTop_toBottomOf="@id/recEntryTitle"
+        app:layout_constraintBottom_toTopOf="@id/recFeeling"
         />
 
     <!--<TextView
@@ -74,9 +76,11 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="2dp"
         android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="@id/recEntryTitle"
-        app:layout_constraintTop_toBottomOf="@id/recEntryAuthor" />
+        app:layout_constraintTop_toBottomOf="@id/recEntryAuthor"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/recTrack"
@@ -87,7 +91,7 @@
         android:layout_marginLeft="20dp"
         app:layout_constraintLeft_toRightOf="@id/recFeeling"
         app:layout_constraintTop_toBottomOf="@id/recEntryAuthor"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="16sp"
         android:gravity="center"/>
