--- a/app/src/main/res/layout/activity_meal_detail.xml
+++ b/app/src/main/res/layout/activity_meal_detail.xml
@@ -107,7 +107,7 @@
         android:id="@+id/submitChange"
         android:layout_width="181dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#6ACDDA"
+        android:backgroundTint="#0066ff"
         android:text="SAVE ALL CHANGE"
         android:textColor="#FFFFFF"
         android:visibility="invisible"
